# Uma-Musume-RaceStat-Calculator

./: CMakeLists.txt  LICENSE  Makefile  README.md  build_gui_mingw.bat  build_gui_msvc.bat  run.bat  uma_calculator.html
data/: import_data.py  template.py
include/: calculator.h  skill.h  stats.h
src/: calculator.cpp  main_gui.cpp  skill.cpp  stats.cpp
